assets/styles/style.css
@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);

/*MAIN*/

.wrapper{
  margin: 0 auto;
  width: 100%;
  font-family: 'Lato', sans-serif;
  color: #333;
  font-size: 1em;
  font-weight: 300;
}

h1 {
  font-size: 3em;
  font-weight: 900;
}

h2 {
  font-size: 2em;
  font-weight: 900;
}

h3 {
  font-size: 1.75em;
  font-weight: 900;
}

h4 {
  font-size: 1.5em;
  font-weight: 900;
}

h5 {
  font-size: 1.25em;
  font-weight: 900;
}

h6 {
  font-size: 1em;
  font-weight: 900;
}

/*NAVIGATION*/
header{
  background-color: #eeeeee;
  padding: 10px;
  min-height: 50px;
  width: 100%;
  overflow: auto;
  border: 1px solid black;
}
nav{
  max-width: 80%;
  margin: 0 auto;
  border: 1px solid black;
}

nav ul{
  list-style-type: none;
  float: right;
}
nav ul li{
  display: inline;
  /*padding: 15px;*/
  line-height: 40px;
  border: 1px solid black;
}
nav ul li a{
  color: #333;
  text-decoration: none;
}

nav ul li a:hover{
  /*font-weight: bold;*/
  border-bottom: 1px solid #333;
}

nav ul li:after {
   content:" | ";
   padding: 0 5px 0 15px;
}

nav ul li:last-child:after {
   content:" ";
}

.brand {
  max-width: 80%;
  margin: 0 auto;
  border: 1px solid black;
}

.profile-nav {
  float: right;
  border: 1px solid black;
}

.profile-nav:after {
  content: " ";
  clear: both;
}

img{max-width: 100%;}

p{margin: 0 0 10px 0; line-height: 1;}


/*form {
  border: none;
  display: block;
}*/

input{
      border:0;
      padding:10px;
      margin: 2px;
      font-size:12px;
      display: block;
    }
input[type="submit"] {
  background: red;
  color:white;
}

#register, #login, .user-messages, .new-bike-posting {
  width: 200px;
  height: 200px;
  overflow: auto;
  background-color: #eee;
  border: 1px solid black;
}

/*.new-bike-posting {
  background-color: #ddd;
  float: left;
  width: 200px;
  overflow: auto;
  border: 1px solid black;
}*/

.container{
  max-width: 80%;
  margin: 0 auto 40px;
  overflow: auto;
  border: 1px solid black;
}

.bikes-for-sale, .profile, .post-bike {
  overflow: auto;
  border: 1px solid black;
}

.post-bike {
  background-color: #eee;
}

.bike-posts {
  background-color: #eee;
  padding: 10px;
  width: 200px;
  height: 200px;
  overflow: auto;
  float: left;
  border: 1px solid black;
}

.bike-posts:after {
  content: " ";
  clear: both;
}

.new-post-form {
  float: left;
}

